Do the linking of categories men, women and kids and fix the overflow of the navbar

--- a/frontend/src/components/colors/colors.css
+++ b/frontend/src/components/colors/colors.css
@@ -25,7 +25,7 @@ button.selected {
 
 
 #Black{
-    background-color: black;
+    background-color: #000000;
     color: black;
 }
 
